src/parser/Yal.java
/* Yal.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. Yal.java */
package parser;

import java.io.File;
import java.io.FileInputStream;
import java.io.FileNotFoundException;

import java.io.FileOutputStream;
import java.io.IOException;
import java.util.Arrays;
import codeGeneration.CodeGenerator;
import utils.Utils;




public class Yal/*@bgen(jjtree)*/implements YalTreeConstants, YalConstants {/*@bgen(jjtree)*/
  protected static JJTYalState jjtree = new JJTYalState();
  private static Yal myYal;
  private static boolean error = false;
  private static int optRN = -1;
  private static boolean debug = true;

  public static void main(String args []) throws ParseException, IOException
  {

    if( validArgs(args) == false)
        return;
    else {

        SimpleNode root = myYal.Program(); // devolve referência para o nó raiz da árvore

        System.out.println("\u005cnAST Tree:");
        root.dump(""); // imprime no ecrã a árvore
        if(error == false) {
                System.out.println("");
                root.analyse();
                System.out.println("\u005cnFunction Table:");
                root.printFunctionTable("");
                        System.out.println("\u005cnSymbol Table:");
                        root.printSymbolTable("");
                        if(optRN >= 0) {
                            if(debug)
                                        root.dumpUsesDefs("");
                                root.handleSuccessorsAntecessors();
                                if(debug)
                                        root.dumpSuccessorsAntecessors();
                                root.handleOptimizationR(optRN);


                        }
                        CodeGenerator codeGenerator = new CodeGenerator(root);
                        codeGenerator.generateCode();
                }
    }
  }

  public static boolean getDebug() {
                return debug;
  }

  public static File validFilePath(String filePath) {
                File file = new File(filePath);

                if(file.exists())
                        return file;
                else
                        return null;

  }


  public static boolean validArgs(String args []) {
                if(args.length > 2) {
                        System.out.println("Error: Invalid number of arguments.");
                        System.out.println("Usage: java Yal [filePath] [-r=< n >]");
                        return false;
                }

                else if(args.length == 0)
                        myYal = new Yal(System.in);
                else {
                                File file;
                        if( (file = validFilePath(args[0])) == null) {
                                System.out.println("Error: Invalid file Path.");
                                System.out.println("Usage: java Yal [filePath] [-r=< n >]");
                                return false;
                        }
                        else {
                                FileInputStream stream;
                                                                try {
                                                                        stream = new FileInputStream(file);
                                                                        myYal = new Yal(stream);
                                                                } catch (FileNotFoundException e) {
                                                                        System.out.println("Error in stream constructor: ");
                                                                        System.out.println("Usage: java Yal [filePath] [-r=< n >]");
                                                                        e.printStackTrace();
                                                                        return false;
                                                                }

                        }
                if(args.length == 2) {

             if(args[1].substring(0, 3).equals("-r=")) {
                                if(Utils.isInteger(args[1].substring(3))) {
                                        optRN = Integer.parseInt(args[1].substring(3));
                                        if(optRN < 0) {
                                                System.out.println("Error: The number in option R must be an integer greater or equal to 0.");
                                                System.out.println("Usage: java Yal [filePath] [-r=< n >]");
                                                return false;
                                        }
                                }
                                else {
                                        System.out.println("Error: The number in option R must be an integer.");
                                        System.out.println("Usage: java Yal [filePath] [-r=< n >]");
                                        return false;
                                }
             }
             else {
                                System.out.println("Error: Non valid argument");
                                System.out.println("Usage: java Yal [filePath] [-r=< n >]");
                                return false;
             }
        }

      }


                return true;
  }


   public static void generateCode(SimpleNode root) throws IOException
  {
    FileOutputStream outputStream = new FileOutputStream("test.j");
    String codeString = root.generateCode();
    byte [] strToBytes = codeString.getBytes();
    outputStream.write(strToBytes);
    outputStream.close();
  }

  public static void errorSkipTo(ParseException e, String errorMessage,  SkipToken... skipTargets) {
    error = true;
    System.out.println("Syntatic Error on " + errorMessage + ". " + e.toString());

    skipTokens(skipTargets);

  }



  public static void errorSkipTo(ParseException e, String errorMessage, Integer leftToken, Integer rightToken, SkipToken... skipTargets) {
   error = true;
   System.out.println("Syntatic Error on " + errorMessage + ". " + e.toString());

        Integer token = skipTokens(skipTargets);

        if(token == leftToken) {
                Token t;

                do {
                        t = getNextToken();
                }while(t.kind != rightToken);

        }

  }

  public static Integer skipTokens(SkipToken... skipTargets) {

        boolean foundTarget = false;
        Token t;

        do {
      t = getToken(1);

          for(int i = 0; i < skipTargets.length && foundTarget == false; i++)
                 if(skipTargets[i].getToken() == t.kind) {
                        foundTarget = true;
                        if(skipTargets[i].isConsumed() == true)
                          getNextToken();

                 }



      if(!foundTarget)
        getNextToken();

    } while (!foundTarget);

    return t.kind;

  }

  public static void coverageBlock() throws ParseException {
        Token t1;
    t1 = getToken(1);
    if(t1.kind == LCHAVETA) {
          getNextToken();
      StmtlstError();
    }
  }

  public static void consumeToken(Integer... tokens) throws ParseException {
        Token t;
        t = getToken(1);

        if(Arrays.asList(tokens).contains(t.kind)) {
                getNextToken();
        }
  }

  static final public SimpleNode Program() throws ParseException {/*@bgen(jjtree) Program */
  ASTProgram jjtn000 = new ASTProgram(JJTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      Module();
jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.jjtSetLastToken(getToken(0));
{if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void Module() throws ParseException {/*@bgen(jjtree) Module */
 ASTModule jjtn000 = new ASTModule(JJTMODULE);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);
 jjtn000.jjtSetFirstToken(getToken(1));Token t;
    try {
      try {
        jj_consume_token(MODULE);
        t = jj_consume_token(ID);
jjtn000.jjtAddValue(t.image);
        jj_consume_token(LCHAVETA);
      } catch (ParseException e) {
error = true;
    System.out.println("Syntatic error on module declaration. " + e.toString());
    {if ("" != null) return;}
      }
      try {
        label_1:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case ID:{
            ;
            break;
            }
          default:
            jj_la1[0] = jj_gen;
            break label_1;
          }
          Declaration();
        }
      } catch (ParseException e) {
errorSkipTo(e, "declarations module area", new SkipToken(PVIRG, true), new SkipToken(FUNCTION, false));
      }
      try {
        label_2:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case FUNCTION:{
            ;
            break;
            }
          default:
            jj_la1[1] = jj_gen;
            break label_2;
          }
          Function();
        }
        jj_consume_token(RCHAVETA);
      } catch (ParseException e) {
errorSkipTo(e, "functions module area", new SkipToken(RCHAVETA, true));
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
  }

  static final public void Declaration() throws ParseException {/*@bgen(jjtree) Declaration */
  ASTDeclaration jjtn000 = new ASTDeclaration(JJTDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      try {
        Element();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ASSIGN:{
          jj_consume_token(ASSIGN);
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 31:{
            ArrayAssigned();
            break;
            }
          case ADDSUB_OP:
          case INTEGER:{
            ScalarAssigned();
            break;
            }
          default:
            jj_la1[2] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          break;
          }
        default:
          jj_la1[3] = jj_gen;
          ;
        }
        jj_consume_token(PVIRG);
      } catch (ParseException e) {
errorSkipTo(e, "declaration", new SkipToken(PVIRG, true), new SkipToken(FUNCTION, false));
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
  }

  static final public void ArrayAssigned() throws ParseException {/*@bgen(jjtree) ArrayAssigned */
  ASTArrayAssigned jjtn000 = new ASTArrayAssigned(JJTARRAYASSIGNED);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      jj_consume_token(31);
      ArraySize();
      jj_consume_token(32);
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
  }

  static final public void ScalarAssigned() throws ParseException {/*@bgen(jjtree) ScalarAssigned */
                         ASTScalarAssigned jjtn000 = new ASTScalarAssigned(JJTSCALARASSIGNED);
                         boolean jjtc000 = true;
                         jjtree.openNodeScope(jjtn000);
                         jjtn000.jjtSetFirstToken(getToken(1));Token t1, t2;
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ADDSUB_OP:{
        t1 = jj_consume_token(ADDSUB_OP);
jjtn000.jjtAddValue(t1.image);
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        ;
      }
      t2 = jj_consume_token(INTEGER);
jjtree.closeNodeScope(jjtn000, true);
                           jjtc000 = false;
                           jjtn000.jjtSetLastToken(getToken(0));
jjtn000.jjtAddValue(t2.image);
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtn000.jjtSetLastToken(getToken(0));
          }
    }
  }

  static final public void Function() throws ParseException {/*@bgen(jjtree) Function */
                    ASTFunction jjtn000 = new ASTFunction(JJTFUNCTION);
                    boolean jjtc000 = true;
                    jjtree.openNodeScope(jjtn000);
                    jjtn000.jjtSetFirstToken(getToken(1));Token t=null;
    try {
      try {
        jj_consume_token(FUNCTION);
        t = jj_consume_token(ID);
jjtn000.jjtAddValue(t.image);
      } catch (ParseException e) {
errorSkipTo(e, "function name", new SkipToken(LPAR, false));
      }
      try {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ASSIGN:
        case 31:{
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 31:{
            ArrayElementNoID(t.image);
            break;
            }
          default:
            jj_la1[5] = jj_gen;
            ScalarElementNoID(t.image);
          }
          FunctionAssign();
jjtn000.jjtSetValue("");
          jj_consume_token(LPAR);
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case ID:{
            Varlist();
            break;
            }
          default:
            jj_la1[6] = jj_gen;
            ;
          }
          jj_consume_token(RPAR);
          break;
          }
        case LPAR:{
          jj_consume_token(LPAR);
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case ID:{
            Varlist();
            break;
            }
          default:
            jj_la1[7] = jj_gen;
            ;
          }
          jj_consume_token(RPAR);
          break;
          }
        default:
          jj_la1[8] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (ParseException e) {
errorSkipTo(e, "function declaration", new SkipToken(RPAR, true));
      }
      try {
        jj_consume_token(LCHAVETA);
        Stmtlst();
        jj_consume_token(RCHAVETA);
      } catch (ParseException e) {
errorSkipTo(e, "function body",  new SkipToken(RCHAVETA, true));
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
  }

  static final public void FunctionAssign() throws ParseException {/*@bgen(jjtree) FunctionAssign */
                         ASTFunctionAssign jjtn000 = new ASTFunctionAssign(JJTFUNCTIONASSIGN);
                         boolean jjtc000 = true;
                         jjtree.openNodeScope(jjtn000);
                         jjtn000.jjtSetFirstToken(getToken(1));Token t;
    try {
      jj_consume_token(ASSIGN);
      t = jj_consume_token(ID);
jjtree.closeNodeScope(jjtn000, true);
           jjtc000 = false;
           jjtn000.jjtSetLastToken(getToken(0));
jjtn000.jjtAddValue(t.image);
    } finally {
if (jjtc000) {
             jjtree.closeNodeScope(jjtn000, true);
             jjtn000.jjtSetLastToken(getToken(0));
           }
    }
  }
